# markov

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
source/: Alloca.hpp  CMakeLists.txt  Markov.cpp  Markov.hpp  View.natvis  example.cpp
tests/: CMakeLists.txt  tests.cpp
